--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "lighten-darken-color": "^1.0.0",
+    "loadash": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
+    "react-agenda": "0.0.8",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-spinners": "^0.9.0",
+    "react-timetable-events": "^1.0.2",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
