--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fri-fmf-timetable",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jakic12.github.io/fri-fmf-timetable",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,6 +13,7 @@
     "react": "^17.0.0",
     "react-agenda": "0.0.8",
     "react-dom": "^17.0.0",
+    "react-icons": "^3.11.0",
     "react-scripts": "3.4.4",
     "react-spinners": "^0.9.0",
     "react-timetable-events": "^1.0.2",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
