--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ical-generator": "^1.15.1",
     "lighten-darken-color": "^1.0.0",
     "loadash": "^1.0.0",
     "moment": "^2.29.1",
