--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.0",
     "react-agenda": "0.0.8",
     "react-dom": "^17.0.0",
+    "react-ga": "^3.3.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.4",
     "react-spinners": "^0.9.0",
